fix kil: kill openssl

--- a/src/vit-servicing-station-f10/vit-servicing-station-tests-f10/Cargo.toml
+++ b/src/vit-servicing-station-f10/vit-servicing-station-tests-f10/Cargo.toml
@@ -38,10 +38,7 @@ pretty_assertions = "0.6"
 dyn-clone = "1.0.4"
 itertools = "0.10.3"
 
-[dependencies.reqwest]
-version = "0.11"
-default-features = false
-features = ["blocking","native-tls"]
+reqwest = { workspace = true }
 
 # This solves building on windows when sqlite3lib is not installed or missing in the `$PATH`
 # as it happens with the github actions pipeline associated to this project.
