--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -127,7 +127,7 @@ jobs:
 
       # We are excluding cat-dat-service and event-db because we are already running it with Earthly
       - name: Build and archive tests
-        run: | 
+        run: |
           cargo nextest archive \
             --workspace \
             --exclude vitup \
@@ -138,6 +138,10 @@ jobs:
             --exclude vit-servicing-station-server \
             --exclude vit-servicing-station-tests \
             --exclude vit-servicing-station-lib \
+            --exclude vit-servicing-station-cli-f10 \
+            --exclude vit-servicing-station-server-f10 \
+            --exclude vit-servicing-station-tests-f10 \
+            --exclude vit-servicing-station-lib-f10 \
             --exclude cat-data-service \
             --exclude event-db \
             --exclude wallet-uniffi \
@@ -211,6 +215,8 @@ jobs:
           path: |
                   target/debug/vit-servicing-station-cli
                   target/debug/vit-servicing-station-server
+                  target/debug/vit-servicing-station-cli-f10
+                  target/debug/vit-servicing-station-server-f10
                   target/debug/jcli
                   target/debug/jormungandr
                   target/debug/explorer
@@ -221,7 +227,7 @@ jobs:
 
       - name: Install cargo-make
         run: cargo install --force cargo-make
-      
+
       - name: Install refinery
         run: cargo install refinery_cli
 
@@ -232,7 +238,7 @@ jobs:
       - name: Build external dependencies
         if: steps.deps-cache.outputs.cache-hit != 'true'
         run:
-          cargo build -p vit-servicing-station-cli -p vit-servicing-station-server -p jcli -p jormungandr -p explorer
+          cargo build -p vit-servicing-station-cli -p vit-servicing-station-server -p vit-servicing-station-cli-f10 -p vit-servicing-station-server-f10 -p jcli -p jormungandr -p explorer
 
       - name: Setup Event DB
         env:
@@ -242,7 +248,7 @@ jobs:
       # We are excluding cat-dat-service and event-db because we are already running it with Earthly
       - name: Build and archive tests
         if: steps.archive-cache.outputs.cache-hit != 'true'
-        run: | 
+        run: |
           cargo nextest archive \
             --workspace \
             --exclude vitup \
@@ -253,6 +259,10 @@ jobs:
             --exclude vit-servicing-station-server \
             --exclude vit-servicing-station-tests \
             --exclude vit-servicing-station-lib \
+            --exclude vit-servicing-station-cli-f10 \
+            --exclude vit-servicing-station-server-f10 \
+            --exclude vit-servicing-station-tests-f10 \
+            --exclude vit-servicing-station-lib-f10 \
             --exclude cat-data-service \
             --exclude event-db \
             --exclude wallet-uniffi \
@@ -388,6 +398,6 @@ jobs:
         with:
           toolchain: ${{env.RUST_LATEST_STABLE_VERSION}}
           components: rustfmt, clippy
-          
+
       - run: rustup component add clippy
       - run: scripts/check-fmt.sh
