--- a/src/audit/Cargo.toml
+++ b/src/audit/Cargo.toml
@@ -35,6 +35,7 @@ serde_yaml = "0.8.17"
 tracing.workspace = true
 tracing-subscriber.workspace = true
 rand = "0.8.3"
+rayon = "1.8.0"
 
 
 [dev-dependencies]
