--- a/src/sign/Cargo.toml
+++ b/src/sign/Cargo.toml
@@ -33,6 +33,7 @@ serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8.17"
 rand = "0.8.3"
+bech32 = "0.8"
 
 
 rand_core = { version = "0.5.1", default-features = false }
