--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,18 @@ opentelemetry = { version = "0.18", features = ["rt-tokio"] }
 opentelemetry-otlp = "0.11.0"
 opentelemetry-semantic-conventions = "0.10.0"
 
+rand = "0.8.3"
+rand_core = "0.6"
+rand_chacha = "0.3"
+
+# Serde
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.9.25"
+serde_with = { version = "3", features = ["macros"] }
+serde_test = "1"
+
+
 # Framework for instrumenting Rust programs to collect structured, event-based diagnostic information.
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
