--- a/src/sign/Cargo.toml
+++ b/src/sign/Cargo.toml
@@ -34,4 +34,4 @@ rand = "0.8.3"
 bech32 = "0.8"
 rand_core = { version = "0.5.1", default-features = false }
 ed25519-dalek = "1.0.1"
-reqwest = { version = "*", features = ["blocking","json"] }
+reqwest = { version = "*", default_features = false, features = [ "blocking","json", "rustls-tls" ] }
