--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,8 @@ treefmt.toml
 
 # local earthly Environments
 local/*
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
