--- a/src/chain-libs/.github/workflows/main.yml
+++ b/src/chain-libs/.github/workflows/main.yml
@@ -282,7 +282,7 @@ jobs:
           timeout: 600
 
       - name: upload to Coveralls
-        uses: coverallsapp/github-action@master
+        uses: coverallsapp/github-action@tests/typhon-registration
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: './lcov.info'
