--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "@playwright/test": "^1.41.0",
     "@types/node": "^20.11.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
