--- a/src/jormungandr/.github/workflows/test.yml
+++ b/src/jormungandr/.github/workflows/test.yml
@@ -318,7 +318,7 @@ jobs:
           timeout: 3600
 
       - name: upload to Coveralls
-        uses: coverallsapp/github-action@tests/typhon-registration
+        uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: './lcov.info'
