--- a/.github/workflows/ci-tests-n-coverage.yml
+++ b/.github/workflows/ci-tests-n-coverage.yml
@@ -100,7 +100,7 @@ jobs:
           cargo llvm-cov report --lcov --output-path ./lcov.info
 
       - name: Upload code coverage to coveralls.io
-        uses: coverallsapp/github-action@tests/typhon-registration
+        uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: "./lcov.info"
