--- a/src/chain-wallet-libs/.github/workflows/release.yaml
+++ b/src/chain-wallet-libs/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ jobs:
       version: ${{ steps.get_version.outputs.version }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@tests/typhon-registration
+        uses: actions/checkout@master
 
       - name: Create Release
         id: create_release
