--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,6 +1,12 @@
 name: Nix CI
 
-on: {}
+on:
+  push:
+    branches: 
+      - main
+  pull_request:
+    branches: 
+      - main
 
 permissions:
   id-token: write
