--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,12 +1,23 @@
 name: Nix CI
 
 on:
-  push:
-    branches: 
-      - main
   pull_request:
-    branches: 
+    paths:
+      - ".github/workflows/nix.yml"
+      - "nix/**"
+      - "src/**"
+      - "Cargo.*"
+      - "flake.*"
+  push:
+    branches:
       - main
+    paths:
+      - ".github/workflows/nix.yml"
+      - "nix/**"
+      - "src/**"
+      - "Cargo.*"
+      - "flake.*"
+  workflow_dispatch:
 
 permissions:
   id-token: write
@@ -77,7 +88,7 @@ jobs:
           nix_key: ${{ secrets.NIX_SIGNING_KEY }}
           cache: ${{ env.S3_CACHE }}
   publish-containers:
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
     needs:
       - discover
       - build-packages
