--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ local/*
 /blob-report/*
 /playwright/.cache/*
 tests/wallet-automation/typhon/usrdatadir/*
+tests/wallet-automation/typhon/playwright-report/*
