--- a/.gitignore
+++ b/.gitignore
@@ -119,9 +119,10 @@ treefmt.toml
 
 # local earthly Environments
 local/*
-# /test-results/*
-# /playwright-report/*    
-# /blob-report/*
-# /playwright/.cache/*
-# tests/wallet-automation/typhon/usrdatadir/*
-# tests/wallet-automation/typhon/playwright-report/*
+/test-results/*
+/playwright-report/*    
+/blob-report/*
+/playwright/.cache/*
+tests/wallet-automation/typhon/usrdatadir/*
+tests/wallet-automation/typhon/playwright-report/*
+tests/wallet-automation/typhon/extensions/*
