--- a/src/audit/Cargo.toml
+++ b/src/audit/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chain-addr = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-chain-crypto = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-chain-vote = {git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-jormungandr-lib = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-chain-core = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-chain-impl-mockchain = {git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling",features= ["audit"] }
-chain-ser = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-chain-storage = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-chain-time = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
-wallet = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
+chain-crypto = { path = "../chain-libs/chain-crypto" }
+chain-vote = { path = "../chain-libs/chain-vote" }
+jormungandr-lib = { path = "../jormungandr/jormungandr-lib" }
+chain-addr = { path = "../chain-libs/chain-addr" }
+chain-core = { path = "../chain-libs/chain-core" }
+chain-impl-mockchain = { path = "../chain-libs/chain-impl-mockchain" ,features= ["audit"]}
+chain-ser = { path = "../chain-libs/chain-ser" }
+chain-storage = { path = "../chain-libs/chain-storage" }
+chain-time = { path = "../chain-libs/chain-time" }
+wallet = { path = "../chain-wallet-libs/wallet" }
 
 rand_core = "0.6"
 
@@ -40,7 +40,7 @@ rand = "0.8.3"
 rand_chacha = "0.3"
 smoke = "^0.2.1"
 criterion = "0.3"
-chain-crypto = {  git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling", features=["property-test-api"]}
+chain-crypto = { path = "../chain-libs/chain-crypto", features=["property-test-api"]}
 
 [lib]
 name = "lib"
