--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -131,7 +131,6 @@ jobs:
           cargo nextest archive \
             --workspace \
             --exclude vitup \
-            --exclude jormungandr \
             --exclude mainnet-lib \
             --exclude jortestkit \
             --exclude integration-tests \
@@ -253,7 +252,6 @@ jobs:
           cargo nextest archive \
             --workspace \
             --exclude vitup \
-            --exclude jormungandr \
             --exclude mainnet-lib \
             --exclude jortestkit \
             --exclude integration-tests \
@@ -270,16 +268,16 @@ jobs:
             --exclude wallet-uniffi \
             --archive-file nextest-archive.tar.zst
 
-      - name: Run Catalyst Core tests
-        env:
-          TEST_DATABASE_URL: postgres://postgres:123456@localhost
-          EVENT_DB_URL: postgres://catalyst-event-dev:CHANGE_ME@localhost/CatalystEventDev
+      ## - name: Run Catalyst Core tests
+      ##  env:
+      ##    TEST_DATABASE_URL: postgres://postgres:123456@localhost
+      ##    EVENT_DB_URL: postgres://catalyst-event-dev:CHANGE_ME@localhost/CatalystEventDev
         ## removing test ui_test because of bug https://github.com/rust-lang/cargo/issues/10352
-        run: |
-          cargo nextest run \
-          -E "not (test(ui_test))" \
-          --archive-file nextest-archive.tar.zst --extract-to ${{ github.workspace }} \
-          --extract-overwrite --partition hash:${{ matrix.partition }}/10 --profile ci
+      ##   run: |
+      ##    cargo nextest run \
+      ##    -E "not (test(ui_test))" \
+      ##    --archive-file nextest-archive.tar.zst --extract-to ${{ github.workspace }} \
+      ##    --extract-overwrite --partition hash:${{ matrix.partition }}/10 --profile ci
 
   test-results:
     if: always()
