--- a/src/catalyst-toolbox/catalyst-toolbox/scripts/python/requirements.txt
+++ b/src/catalyst-toolbox/catalyst-toolbox/scripts/python/requirements.txt
@@ -1,4 +1,6 @@
-httpx==0.23.0
-pydantic==1.8.2
-typer==0.3.2
-pyYAML==6.0
+httpx==0.26.0
+pydantic==2.6.0
+typer==0.9.0
+pyYAML==6.0.1
+aiohttp==3.9.3
+rich==13.7.0
