--- a/.gitignore
+++ b/.gitignore
@@ -125,4 +125,5 @@ local/*
 /playwright/.cache/*
 tests/wallet-automation/typhon/usrdatadir/*
 tests/wallet-automation/typhon/playwright-report/*
+tests/wallet-automation/node_modules/*
 # tests/wallet-automation/typhon/extensions/*
