--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,7 @@ on:
 env:
   RUST_LATEST_STABLE_VERSION: 1.75
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: -D warnings
+  RUSTFLAGS:
   RUST_BACKTRACE: 1
   CARGO_INCREMENTAL: 0
   CARGO_FLAGS: --verbose --locked
