fix: udpate rusct to 1.76.0

--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,7 @@ tests/tmp/
 lefthook.yml
 treefmt.toml
 
-# local earthly Environments
+# local earthly environments
 local/*
 tests/wallet-automation/typhon/usrdatadir/*
 tests/wallet-automation/node_modules/*
