fix: restore nix.yml fix

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,7 +1,13 @@
 name: Nix CI
 
-on: {}
-
+on:
+  push:
+    branches: 
+      - main
+  pull_request:
+    branches: 
+      - main
+      
 permissions:
   id-token: write
   contents: read
