--- a/src/jormungandr/.github/workflows/test.yml
+++ b/src/jormungandr/.github/workflows/test.yml
@@ -107,7 +107,7 @@ jobs:
             profile: debug
             toolchain: nightly
     env:
-      RUSTFLAGS: -D warnings
+      RUSTFLAGS: -Awarnings
       RUST_BACKTRACE: 1
       CARGO_FLAGS: --verbose --locked
       CARGO_INCREMENTAL: 0
@@ -254,7 +254,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all-features --all-targets -- -D warnings
+          args: --all-features --all-targets -- -Awarnings
 
   fmt:
     name: Fmt
