--- a/.github/workflows/build-earthly.yml
+++ b/.github/workflows/build-earthly.yml
@@ -24,7 +24,7 @@ on:
 env:
   RUST_LATEST_STABLE_VERSION: 1.75
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: -D warnings
+  RUSTFLAGS: -Awarnings
   RUST_BACKTRACE: 1
   CARGO_INCREMENTAL: 0
   CARGO_FLAGS: --verbose --locked
@@ -78,4 +78,3 @@ jobs:
       - name: Build everything with Earthly
         run: |
           earthly --remote-cache=ghcr.io/${{ github.repository }}:cache +all
-
