--- a/src/chain-libs/.github/workflows/main.yml
+++ b/src/chain-libs/.github/workflows/main.yml
@@ -158,7 +158,7 @@ jobs:
         uses: actions-rs/cargo@v1
         continue-on-error: false
         env:
-          RUSTFLAGS: -D warnings
+          RUSTFLAGS: -Awarnings
         with:
           command: test
           args: >-
@@ -169,7 +169,7 @@ jobs:
         uses: actions-rs/cargo@v1
         continue-on-error: false
         env:
-          RUSTFLAGS: -D warnings
+          RUSTFLAGS: -Awarnings
         with:
           command: test
           args: >-
@@ -180,7 +180,7 @@ jobs:
         uses: actions-rs/cargo@v1
         continue-on-error: false
         env:
-          RUSTFLAGS: -D warnings
+          RUSTFLAGS: -Awarnings
         with:
           command: test
           args: >-
@@ -233,14 +233,14 @@ jobs:
         continue-on-error: false
         with:
           command: clippy
-          args: --all-targets --all-features -- -D warnings
+          args: --all-targets --all-features -- -Awarnings
 
       - name: Run cargo clippy (all features)
         uses: actions-rs/cargo@v1
         continue-on-error: false
         with:
           command: clippy
-          args: --all-features -- -D warnings
+          args: --all-features -- -Awarnings
 
   test_coverage:
     name: Test Coverage
