--- a/src/chain-wallet-libs/.github/workflows/ci_checks.yaml
+++ b/src/chain-wallet-libs/.github/workflows/ci_checks.yaml
@@ -159,7 +159,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all-features --all-targets -- -D warnings
+          args: --all-features --all-targets -- -Awarnings
 
   test-wasm:
     name: Wasm-pack test
