--- a/src/jormungandr/.github/workflows/test_networking.yml
+++ b/src/jormungandr/.github/workflows/test_networking.yml
@@ -107,7 +107,7 @@ jobs:
             profile: release
             toolchain: nightly
     env:
-      RUSTFLAGS: -D warnings
+      RUSTFLAGS: -Awarnings
       RUST_BACKTRACE: 1
       CARGO_FLAGS: --verbose --locked
       CARGO_INCREMENTAL: 0
