fix: pin refinery_cli version

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -229,7 +229,7 @@ jobs:
         run: cargo install --force cargo-make
 
       - name: Install refinery
-        run: cargo install refinery_cli
+        run: cargo install refinery_cli --version 0.8.7 --locked
 
       - name: Install dependencies
         run:
