--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -226,7 +226,7 @@ jobs:
         uses: taiki-e/install-action@nextest
 
       - name: Install cargo-make
-        run: cargo install --force cargo-make --locked
+        run: cargo install --force cargo-make --version 0.37.11 --locked
 
       - name: Install refinery
         run: cargo install refinery_cli --version 0.8.7 --locked
