--- a/src/sign/Cargo.toml
+++ b/src/sign/Cargo.toml
@@ -35,6 +35,6 @@ serde_json = "1.0"
 serde_yaml = "0.8.17"
 rand = "0.8.3"
 bech32 = "0.8"
-rand_core = { version = "0.5.1", default-features = false }
+rand_core = { version = "0.5.1", default-features = false, features = ["getrandom"] }
 ed25519-dalek = "1.0.1"
 reqwest = { version = "*", default_features = false, features = [ "blocking","json", "rustls-tls" ] }
