--- a/src/chain-libs/chain-impl-mockchain/Cargo.toml
+++ b/src/chain-libs/chain-impl-mockchain/Cargo.toml
@@ -32,6 +32,8 @@ criterion = { version = "0.3.0", optional = true }
 rand = "0.8"
 cryptoxide = "0.4"
 tracing.workspace = true
+num-integer = "0.1"
+
 
 [features]
 property-test-api = [
