--- a/src/chain-libs/chain-vote/Cargo.toml
+++ b/src/chain-libs/chain-vote/Cargo.toml
@@ -14,6 +14,9 @@ thiserror = "1.0"
 cryptoxide = "^0.4.2"
 const_format = "0.2"
 base64 = "0.21.0"
+tracing = "0.1"
+num-integer = "0.1"
+
 
 [dev-dependencies]
 rand_chacha = "0.3"
