--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,6 @@ permissions:
 
 jobs:
   ci:
-    uses: input-output-hk/catalyst-ci/.github/workflows/ci.yml@master
+    uses: input-output-hk/catalyst-forge/.github/workflows/ci.yml@ci/v1.5.3
     with:
-      aws_ecr_registry: 332405224602.dkr.ecr.eu-central-1.amazonaws.com
-      aws_role_arn: arn:aws:iam::332405224602:role/ci
-      aws_region: eu-central-1
-      publish_docs: false
-    secrets:
-      dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
-      dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
-      earthly_runner_address: ${{ secrets.EARTHLY_SATELLITE_ADDRESS }}
-      earthly_runner_secret: ${{ secrets.EARTHLY_RUNNER_SECRET }}
+      forge_version: 0.8.1
