refactor(gamma): big decimal

--- a/src/chain-libs/chain-vote/Cargo.toml
+++ b/src/chain-libs/chain-vote/Cargo.toml
@@ -15,7 +15,8 @@ cryptoxide = "^0.4.2"
 const_format = "0.2"
 base64 = "0.21.0"
 tracing = "0.1"
-num-integer = "0.1"
+bigdecimal = "0.4.7"
+
 
 
 [dev-dependencies]
