--- a/src/chain-libs/chain-vote/Cargo.toml
+++ b/src/chain-libs/chain-vote/Cargo.toml
@@ -15,6 +15,8 @@ cryptoxide = "^0.4.2"
 const_format = "0.2"
 base64 = "0.21.0"
 bigdecimal = "0.4.7"
+num = "0.4.3"
+tracing = "*"
 
 
 [dev-dependencies]
