--- a/src/chain-libs/chain-vote/Cargo.toml
+++ b/src/chain-libs/chain-vote/Cargo.toml
@@ -14,7 +14,8 @@ thiserror = "1.0"
 cryptoxide = "^0.4.2"
 const_format = "0.2"
 base64 = "0.21.0"
-bigdecimal = "0.4.7"
+bigdecimal = "~0.2"
+bigdecimalmath = "0.1.0"
 num = "0.4.3"
 tracing = "*"
 
