--- a/src/chain-libs/chain-impl-mockchain/Cargo.toml
+++ b/src/chain-libs/chain-impl-mockchain/Cargo.toml
@@ -32,8 +32,7 @@ criterion = { version = "0.3.0", optional = true }
 rand = "0.8"
 cryptoxide = "0.4"
 tracing.workspace = true
-bigdecimal = "~0.2"
-bigdecimalmath = "0.1.0"
+rug = "1.26.1"
 num = "0.4.3"
 
 
