--- a/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
+++ b/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
@@ -72,7 +72,7 @@ assert_cmd = "2"
 predicates = "2"
 assert_fs = "1.0.0"
 chain-vote = { path = "../../chain-libs/chain-vote" }
-proptest = { workspace = true, branch = "master" }
+proptest = { workspace = true }
 test-strategy = "0.2"
 serde_test = "1"
 snapshot-lib =  { path = "../snapshot-lib", features = ["proptest"] }
