--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,7 @@ serde_test = "1"
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
 tracing-futures = "0.2.5"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", default-features = false }
 tracing-opentelemetry = "0.18.0"
 tracing-test = "0.2.3"
 
