--- a/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
+++ b/src/catalyst-toolbox/catalyst-toolbox/Cargo.toml
@@ -65,6 +65,8 @@ fraction = "0.12"
 tracing.workspace = true
 tracing-subscriber.workspace = true
 vit-servicing-station-lib = { path = "../../vit-servicing-station/vit-servicing-station-lib", optional = true }
+proptest.workspace = true
+test-strategy = "0.2"
 
 [dev-dependencies]
 rand_chacha = "0.3"
