--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -387,11 +387,8 @@ jobs:
           sudo apt install -y protobuf-compiler libssl-dev libpq-dev libsqlite3-dev pkg-config
 
       - name: Install uniffi
-        uses: actions-rs/install@v0.1
-        with:
-          crate: uniffi_bindgen
-          version: 0.29.3
-          use-tool-cache: true
+        run: |
+          cargo add uniffi_bindgen --version 0.29.3
 
       - name: Clippy and fmt
         uses: actions-rs/toolchain@v1
