--- a/src/chain-wallet-libs/bindings/wallet-uniffi/Cargo.toml
+++ b/src/chain-wallet-libs/bindings/wallet-uniffi/Cargo.toml
@@ -20,6 +20,7 @@ chain-crypto = { path = "../../../chain-libs/chain-crypto" }
 chain-time = { path = "../../../chain-libs/chain-time" }
 chain-ser = { path = "../../../chain-libs/chain-ser" }
 thiserror = {version = "1.0", default-features = false}
+uniffi_bindgen = "0.29.3"
 
 [build-dependencies]
 uniffi_build = "0.21"
