--- a/src/chain-wallet-libs/hdkeygen/Cargo.toml
+++ b/src/chain-wallet-libs/hdkeygen/Cargo.toml
@@ -24,3 +24,6 @@ cardano-legacy-address = { path = "../../chain-libs/cardano-legacy-address" }
 [dev-dependencies]
 quickcheck = "0.9"
 quickcheck_macros = "0.9"
+
+[features]
+with-bench = []
